--- a/variants/v1.5.3153.0-fh2-4.6.304/Dockerfile
+++ b/variants/v1.5.3153.0-fh2-4.6.304/Dockerfile
@@ -71,5 +71,7 @@ RUN apt-get update && apt-get install -y apt-transport-https software-properties
 #   GameLogic created
 #   Serversettings created
 ENV PYTHONHOME=
+EXPOSE 16567/udp
+EXPOSE 29900/udp
 WORKDIR /server/bf2
 CMD [ "./start.sh" ]
