Refactor: Rename v1.5.3153.0-bf2stats variant to v1.5.3153.0-bf2stats-2.2.0

--- a/variants/v1.5.3153.0-bf2stats-2.2.0/Dockerfile
+++ b/variants/v1.5.3153.0-bf2stats-2.2.0/Dockerfile
@@ -25,7 +25,7 @@ COPY ESAI-Standard-v4.2.zip ESAI-Standard-v4.2.zip
 RUN sha256sum ESAI-Standard-v4.2.zip | grep ef4e5d0f1446b9a2ddb0b350f1334273681c0f64d9c38c506320db769b24499c
 RUN unzip ESAI-Standard-v4.2.zip -d /server/bf2/mods/bf2
 
-# Install bf2stats
+# Install bf2stats 2
 WORKDIR /root
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
 RUN curl -ssLO https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/bf2stats/bf2statisitcs_2.2.0.zip # I know, it is mispelled
