--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -266,11 +266,11 @@ jobs:
       run: docker logout
       if: always()
 
-  build-v1-5-3153-0-bf2stats:
+  build-v1-5-3153-0-bf2stats-2-2-0:
     runs-on: ubuntu-latest
     env:
-      VARIANT_TAG: v1.5.3153.0-bf2stats
-      VARIANT_BUILD_DIR: variants/v1.5.3153.0-bf2stats
+      VARIANT_TAG: v1.5.3153.0-bf2stats-2.2.0
+      VARIANT_BUILD_DIR: variants/v1.5.3153.0-bf2stats-2.2.0
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -521,7 +521,7 @@ jobs:
       if: always()
 
   update-draft-release:
-    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats, build-v1-5-3153-0-fh2-4-6-304]
+    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-fh2-4-6-304]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -535,7 +535,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-draft-release:
-    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats, build-v1-5-3153-0-fh2-4-6-304]
+    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-fh2-4-6-304]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
