--- a/variants/v1.5.3153.0-bf2stats-2.2.0/Dockerfile
+++ b/variants/v1.5.3153.0-bf2stats-2.2.0/Dockerfile
@@ -28,7 +28,7 @@ RUN unzip ESAI-Standard-v4.2.zip -d /server/bf2/mods/bf2
 # Install bf2stats 2
 WORKDIR /root
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
-RUN curl -ssLO https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/bf2stats/bf2statisitcs_2.2.0.zip # I know, it is mispelled
+RUN curl -sSLO https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/bf2stats/bf2statisitcs_2.2.0.zip # I know, it is mispelled
 RUN sha256sum bf2statisitcs_2.2.0.zip | grep '^334b662727d64fb2d244b8958b4f3059dcd213488d2bc22f9bd0870995f74b1c '
 RUN unzip bf2statisitcs_2.2.0.zip -d extract
 RUN rm -rf /server/bf2/python
