--- a/docs/examples/v1.5-esai-custom-strategies/docker-compose.yml
+++ b/docs/examples/v1.5-esai-custom-strategies/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - default
     tty: true
     stdin_open: true
+    # healthcheck:
+    #   test: nc -w 1 -vzu 127.0.0.1 16567 && nc -vzu 127.0.0.1 29900
     entrypoint:
       - /bin/bash
     command:
@@ -25,7 +27,6 @@ services:
           set -eu
           esai-helper apply -f /strategies.txt
           exec ./start.sh"
-
 
 networks:
   default:
