--- a/variants/v1.5.3153.0-bf2stats-2.3.2/Dockerfile
+++ b/variants/v1.5.3153.0-bf2stats-2.3.2/Dockerfile
@@ -44,13 +44,17 @@ COPY esai-helper /usr/local/bin/esai-helper
 COPY esai-optimized-strategies-bf2.txt /esai-optimized-strategies-bf2.txt
 COPY esai-optimized-strategies-xpack.txt /esai-optimized-strategies-xpack.txt
 COPY lowercase-helper /usr/local/bin/lowercase-helper
-# Install deployment tools
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install --no-install-recommends -y ca-certificates && rm -rf /var/lib/apt/lists/*
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install --no-install-recommends -y dnsutils netcat && rm -rf /var/lib/apt/lists/*
+# Install network utilities which can be useful for debugging issues
 # Install unzip and zip for the sake of applying ESAI strategies in ./mods/*/levels/*/server.zip at './GameModes/[gpm_coop|gpm_cq|sp1|sp2|sp3]/[16|32|64]/AI/Strategies.ai'
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install --no-install-recommends -y unzip zip && rm -rf /var/lib/apt/lists/*
+RUN export DEBIAN_FRONTEND=noninteractive \
+    && apt-get update  \
+    && apt-get install --no-install-recommends -y \
+        ca-certificates \
+        conntrack dnsutils iproute2 netcat tcpdump \
+        unzip zip \
+    && rm -rf /var/lib/apt/lists/*
 EXPOSE 16567/udp
 EXPOSE 29900/udp
-# HEALTHCHECK CMD nc -w 1 -vzu 127.0.0.1 16567 && nc -vzu 127.0.0.1 29900
+# HEALTHCHECK CMD nc -w 1 -vzu 127.0.0.1 16567 && nc -w 1 -vzu 127.0.0.1 29900
 WORKDIR /server/bf2
 CMD [ "./start.sh" ]
