--- a/variants/v1.5.3153.0/Dockerfile
+++ b/variants/v1.5.3153.0/Dockerfile
@@ -47,7 +47,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update  \
     && apt-get install --no-install-recommends -y \
         ca-certificates \
-        conntrack dnsutils iproute2 netcat tcpdump \
+        conntrack dnsutils iproute2 netcat net-tools tcpdump \
         unzip zip \
     && rm -rf /var/lib/apt/lists/*
 EXPOSE 16567/udp
