--- a/docs/examples/v1.5-esai-custom-strategies/docker-compose.yml
+++ b/docs/examples/v1.5-esai-custom-strategies/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '2.2'
 services:
+  # This is the official BF2 1.5 dedicated server. It does not work unless DNS spoofing is added.
+  # A default ESAI strategy for all maps, and custom ESAI strategies for maps are configured in entrypoint
   bf2:
     image: startersclan/docker-bf2:v1.5.3153.0
     volumes:
       - ./config/bf2/mods/bf2/ai/aidefault-custom.ai:/server/bf2/mods/bf2/ai/aidefault.ai:ro # Customize bots
       - ./config/bf2/mods/bf2/ai/aibehaviours-fixlookatwrapper.ai:/server/bf2/mods/bf2/ai/aibehaviours.ai:ro # LoopAtWrapper fix
-      - ./config/bf2/mods/bf2/ai/aidefaultstrategies-custom-esai.ai:/server/bf2/mods/bf2/ai/aidefaultstrategies.ai:ro # Enable ESAI with a default strategy for all maps
-      - ./config/bf2/mods/bf2/ai/aidefaultstrategiesadd-custom-esai.ai:/server/bf2/mods/bf2/ai/aidefaultstrategiesadd.ai:ro # Enable ESAI with a default strategy for all maps
+      # - ./config/bf2/mods/bf2/ai/aidefaultstrategies-custom-esai.ai:/server/bf2/mods/bf2/ai/aidefaultstrategies.ai:ro # Enable ESAI with a default strategy for all maps. The same can be achieved using: esai-helper apply default-strategy mediumfca
+      # - ./config/bf2/mods/bf2/ai/aidefaultstrategiesadd-custom-esai.ai:/server/bf2/mods/bf2/ai/aidefaultstrategiesadd.ai:ro # Enable ESAI with a default strategy for all maps. The same can be achieved using: esai-helper apply default-strategy mediumfca
       - ./config/strategies.txt:/strategies.txt # Custom ESAI strategies for levels
       - ./config/bf2/mods/bf2/settings/serversettings-custom.con:/server/bf2/mods/bf2/settings/serversettings.con:ro # Server config
       - ./config/bf2/mods/bf2/settings/maplist-custom-coop.con:/server/bf2/mods/bf2/settings/maplist.con:ro # Maplist
@@ -23,7 +25,8 @@ services:
       - -c
       - |
           set -eu
-          esai-helper apply -f /strategies.txt
+          esai-helper --mod bf2 apply default-strategy mediumfca
+          esai-helper --mod bf2 apply -f /strategies.txt
           exec ./start.sh"
 
 networks:
