Fix: Fix `CMD` for `bf2all64` and `fh2` variants to start with the correct mod

--- a/variants/v1.5.3153.0-bf2all64-bf2stats-3.1.1/Dockerfile
+++ b/variants/v1.5.3153.0-bf2all64-bf2stats-3.1.1/Dockerfile
@@ -72,4 +72,4 @@ EXPOSE 16567/udp
 EXPOSE 29900/udp
 # HEALTHCHECK CMD nc -w 1 -vzu 127.0.0.1 16567 && nc -w 1 -vzu 127.0.0.1 29900
 WORKDIR /server/bf2
-CMD [ "./start.sh" ]
+CMD [ "./start.sh", "+modPath", "mods/bf2all64" ]
