Docs: Fix entrypoint syntax error in examples

--- a/docs/examples/v1.5-bf2all64-esai-optimized-strategies/docker-compose.yml
+++ b/docs/examples/v1.5-bf2all64-esai-optimized-strategies/docker-compose.yml
@@ -40,7 +40,7 @@ services:
           set -eu
           esai-helper --mod bf2all64 apply default-strategy mediumfca
           esai-helper --mod bf2all64 apply -f /esai-optimized-strategies-bf2all64.txt
-          exec ./start.sh"
+          exec ./start.sh
 
 networks:
   default:
