Feature: Add `/healthcheck` in all variants

--- a/docs/examples/v1.5-bf2all64-esai-optimized-strategies/docker-compose.yml
+++ b/docs/examples/v1.5-bf2all64-esai-optimized-strategies/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - eapusher.dice.se:92.51.180.45 # Your ASP web server IP
     networks:
       - default
+    healthcheck:
+      test: /healthcheck localhost 29900
     tty: true
     stdin_open: true
     entrypoint:
