--- a/docs/examples/v1.5-bf2hub-bf2stats-2/docker-compose.yml
+++ b/docs/examples/v1.5-bf2hub-bf2stats-2/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - bf2web.gamespy.com:192.168.1.100 # Your ASP web server IP
       - gamestats.gamespy.com:192.168.1.100 # Your ASP web server IP
       - eapusher.dice.se:192.168.1.100 # Your ASP web server IP
+    healthcheck:
+      test: /healthcheck localhost 29900
     tty: true
     stdin_open: true
 
