--- a/docs/examples/v1.5-bf2all64/docker-compose.yml
+++ b/docs/examples/v1.5-bf2all64/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - eapusher.dice.se:92.51.180.45 # Your ASP web server IP
     networks:
       - default
+    healthcheck:
+      test: /healthcheck localhost 29900
     tty: true
     stdin_open: true
 
