--- a/docs/examples/v1.5-bf2stats-3/docker-compose.yml
+++ b/docs/examples/v1.5-bf2stats-3/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - 29900:29900/udp
     networks:
       - default
+    healthcheck:
+      test: /healthcheck localhost 29900
     tty: true
     stdin_open: true
 
