--- a/docs/examples/v1.5-with-delete-udp-conntrack/docker-compose.yml
+++ b/docs/examples/v1.5-with-delete-udp-conntrack/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - 29900:29900/udp
     networks:
       - default
+    healthcheck:
+      test: /healthcheck localhost 29900
     tty: true
     stdin_open: true
     depends_on:
